--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,7 +1,7 @@
 # About
 
-Web-two Journey Covers Web-two technologies; revealing what they are, how they work
+Web3 Journey Covers both Web-two and web-three technologies; revealing what they are, how they work
 and where do they apply. i.e. Javascript and typescript are programming languages
-used in react to build user interfaces.
+used in react to build user interfaces. Solidity is a smart contract development language.
 
 Click on **Introduction** tab to learn more.
