--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,16 +1,13 @@
 # Introduction
 
-Hi 👋!
+My name is Lemuel.
 
-My name is Solomon Sauls.
+Sales Engineer (studied electrical engineering) turned Web3 developer #softwaredeveloper #softwareengineer. Dedicated to building beautiful and useful Dapps.
 
-Sales Engineer (studied electrical engineering) turned Software Developer with a passion and focus for frontend development, 
-augmented reality, Web3, Animation, virtual reality.
+## What is Web-3 Journey?
 
-## What is Web-Two Journey?
-
-It is my learning journey shared to the world through code reinforcing, showcasing adn highlighting key concepts which I (and even yourself)
-can referred to as learning resource.
+It is my learning journey shared to the world through code reinforcing, showcasing and highlighting key concepts which I (and even yourself)
+can refer to as learning resource.
 
 ## Project Repository
 
