--- a/pages/javascriptBasics.mdx
+++ b/pages/javascriptBasics.mdx
@@ -9,7 +9,7 @@
 // in terms scope control. Sidenote: "//" used for single line comments
 // Use const and let instead.
 
-var title = "Welcome to Web-Two Journey";
+var title = "Welcome to Web3 Journey";
 
 // const key word creates an immutable variable
 const newVar = "Hire Me";
