--- a/pages/javascriptBasics.mdx
+++ b/pages/javascriptBasics.mdx
@@ -29,7 +29,7 @@ console.log(newVar);
 ## Basic Javascript Data Types
 
 ```js filename="variables.js" {3} copy
-const preferredName = "Solomon";
+const preferredName = "Lemuel";
 
 // number for defining integers or floating point numbers
 const toes = 10;
@@ -98,15 +98,15 @@ console.log(c);
 // if else statement
 
 const user = {
-  name: 'Solomon',
+  name: 'Lemuel',
   City; 'Steyn'
 }
 
 // strict equality/comparison with three = signs. == is less strict
-if(user.name === 'Solomon') {
-  console.log('It is Solomon');
+if(user.name === 'Lemuel') {
+  console.log('It is Lemuel');
 } else {
-    console.log('It is NOT Solomon');
+    console.log('It is NOT Lemuel');
 }
 
 //control flow; for loop for repeating iterative operations
