--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,4 +11,4 @@ can refer to as learning resource.
 
 ## Project Repository
 
-The project repository is available at [https://github.com/lemuelsolomon/web-two-journey](https://github.com/lemuelsolomon/web-two-journey).
+The project repository is available at [https://github.com/lemuelweb3/web3-journey](https://web3-journey.vercel.app/).
