--- a/pages/javascriptBasics.mdx
+++ b/pages/javascriptBasics.mdx
@@ -6,7 +6,7 @@
 
 ```js filename="variables.js" {3} copy
 // var is not used anymore as it does not provide reliable specificity
-// in terms scope control. Sidenote: "//" used for single line comments
+// in terms of scope control. Sidenote: "//" is used for single line comments
 // Use const and let instead.
 
 var title = "Welcome to Web3 Journey";
