function use illustrated with examples

--- a/pages/advanced/functions.mdx
+++ b/pages/advanced/functions.mdx
@@ -1,9 +1,9 @@
-# Adavanced Javascript
+# Advanced Javascript
 
 ## Different Types Of Javascript Functions
 
 ```js filename="functions.js" {3} copy
-// ======================================================
+// --------
  
  
 console.log('Here Is A Simple Function');
@@ -14,10 +14,10 @@ function greetOne() {
 greetOne() // Output: Hello!
 console.log('')
  
-// ======================================================
+// --------
  
  
-console.log('Simple function with arguments')
+console.log('A Simple function with arguments')
 function greetTwo(name) {
   console.log('sayHello: Hello ' + name + '!')
 }
@@ -25,9 +25,9 @@ function greetTwo(name) {
 greetTwo()
 console.log('')
  
-// ======================================================
+// --------
  
-console.log('Fuction with return values')
+console.log('A Function with return values')
 function square(x) {
   return x * x
 }
@@ -35,20 +35,20 @@ let result = square(7) // result is now equal to 49
 console.log('square: result: ', result)
 console.log('')
  
-// ======================================================
+// --------
  
-console.log('Function with multiple arguments and return values')
-function sumAndProduct(num1, num2) {
-  return [num1 + num2, num1 * num2]
+console.log('A Function with multiple arguments and return values')
+function sumAndProduct(num1, num2, num3) {
+  return [num1 + num2 + num3, num1 * num2 * num3]
 }
  
 // array destructuring
-let [sum, product] = sumAndProduct(4, 5)
-console.log('sumAndProduct: sum: ', sum) // Output: 9
-console.log('sumAndProduct: product: ', product) // Output 20
+let [sum, product] = sumAndProduct(4, 5, 6)
+console.log('sumAndProduct: sum: ', sum) // Output: 15
+console.log('sumAndProduct: product: ', product) // Output 120
 console.log('')
  
-// ======================================================
+// --------
  
 
 
