definition updates based on my understanding: add more

--- a/pages/advanced/arrays.mdx
+++ b/pages/advanced/arrays.mdx
@@ -1,9 +1,13 @@
-# Adavanced Javascript
+# Advanced Javascript
 
 ## Arrays in Javascript
 
+Arrays are containers to store multiple forms data types. Though js is not "strict" about 
+the type-uniformity, essentially it's sound practice to use it to store related data 
+elements like color.
+
 ```js filename="arrays.js" {3} copy
-// ======================================================
+// --------
  
  
 console.log('Access Individual Elements Of An Array');
@@ -13,7 +17,7 @@ console.log('colors: colors[1]: ', colors[1]) // Output: green
 console.log('colors: colors[2]: ', colors[2]) // Output: blue
 console.log('')
 
-// ======================================================
+// --------
  
  
 console.log('Adding items to an array')
@@ -24,7 +28,7 @@ console.log()
 
 console.log('')
 
-// ======================================================
+// --------
  
 console.log('Removing items from the array')
 let removedColor = colors.pop()
@@ -32,7 +36,7 @@ console.log('colors: ', colors) // Output ["red","green","blue"]
 console.log('removedColor:  ', removedColor); //Output: "purple"
 console.log('')
  
-// ======================================================
+// --------
 
 ```
 
