--- a/pages/advanced/arrow functions.mdx
+++ b/pages/advanced/arrow functions.mdx
@@ -1,10 +1,9 @@
-# Adavanced Javascript
+# Advanced Javascript
 
 ## Different Types Of Javascript Functions
 
 ```js filename="functions.js" {3} copy
-// ======================================================
- 
+// -------- 
  
 console.log('Here Is A Simple Function');
 function greetOne() {
@@ -14,8 +13,7 @@ function greetOne() {
 greetOne() // Output: Hello!
 console.log('')
  
-// ======================================================
- 
+// -------- 
  
 console.log('Simple function with arguments')
 function greetTwo(name) {
@@ -25,8 +23,7 @@ function greetTwo(name) {
 greetTwo()
 console.log('')
  
-// ======================================================
- 
+// -------- 
 console.log('Fuction with return values')
 function square(x) {
   return x * x
@@ -35,8 +32,7 @@ let result = square(7) // result is now equal to 49
 console.log('square: result: ', result)
 console.log('')
  
-// ======================================================
- 
+// -------- 
 console.log('Function with multiple arguments and return values')
 function sumAndProduct(num1, num2) {
   return [num1 + num2, num1 * num2]
@@ -48,8 +44,7 @@ console.log('sumAndProduct: sum: ', sum) // Output: 9
 console.log('sumAndProduct: product: ', product) // Output 20
 console.log('')
  
-// ======================================================
- 
+// -------- 
 
 
 
