--- a/pages/advanced/functions.mdx
+++ b/pages/advanced/functions.mdx
@@ -2,6 +2,9 @@
 
 ## Different Types Of Javascript Functions
 
+Functions offer us a way to create reusable operations through code. I f you look at your body, you have
+an operation to breathe, run and walk which are repeatable and reusable operations or functions.
+
 ```js filename="functions.js" {3} copy
 // --------
  
