--- a/pages/javascriptBasics.mdx
+++ b/pages/javascriptBasics.mdx
@@ -17,7 +17,7 @@ const newVar = "Hire Me";
 // meaning you cannot assign a new value to the const as shown below
 // newVar = 'Hire me for a senior role';
 
-// use let to create a muatable variable.
+// use let to create a mutable variable.
 let newVarOne = "Hire Me For New Roles";
 
 // reassigning a new value is enabled now
@@ -67,7 +67,7 @@ console.log(jobDetails);
 const respectiveWalletBalances = walletUsers.concat([1000, 2000]);
 
 console.log(respectiveWalletBalances);
-// retruns a new array with 1000 and 2000 appended to the walletUsers array
+// returns a new array with 1000 and 2000 appended to the walletUsers array
 
 // Get the type of a variable
 
@@ -85,10 +85,10 @@ const bNumber = Number(b);
 
 const c = a + b;
 
-// Implicit typing can produce unpredicatble or unreliable results
+// Implicit type casting can produce unpredicatble or unreliable results
 // produces 300 because performed casting by the interpreter is releavant to
 // the value of a
-// however, sometimes you might need to join (concatenate) so this operations is
+// however, sometimes you might need to join (concatenate) so this operation is
 // not suitable so be aware of that.
 
 console.log(c);
@@ -99,7 +99,7 @@ console.log(c);
 
 const user = {
   name: 'Lemuel',
-  City; 'Steyn'
+  City; 'City And Suburban'
 }
 
 // strict equality/comparison with three = signs. == is less strict
